:data: first commit

--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-  workflow_dispatch:
+
 jobs:
   test:
     name: Run Lint and Test
@@ -22,6 +22,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+      
+      - name: Build hooks
+        run: npm run build-hooks
 
       - name: Run tests
         run: npm run test
@@ -44,9 +47,6 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name:Build Compomnents
-        run: npm run build
-        
       - name: Build docs
         run: npm run docs:build
 
